--- a/index.html
+++ b/index.html
@@ -69,23 +69,35 @@
     </form>
 
     <section id="error-btns">
-      <button>Console Log</button>
-      <button>Console Error</button>
-      <button>Console Count</button>
-      <button>Console Warn</button>
-      <button>Console Assert</button>
-      <button>Console Clear</button>
-      <button>Console Dir</button>
-      <button>Console dirxml</button>
-      <button>Console Group Start</button>
-      <button>Console Group End</button>
-      <button>Console Table</button>
-      <button>Start Timer</button>
-      <button>End Timer</button>
-      <button>Console Trace</button>
-      <button>Trigger a Global Error</button>
+      <button id="console-log">Console Log</button>
+      <button id="console-error">Console Error</button>
+      <button id="console-count">Console Count</button>
+      <button id="console-warn">Console Warn</button>
+      <button id="console-assert">Console Assert</button>
+      <button id="console-clear">Console Clear</button>
+      <button id="console-dir">Console Dir</button>
+      <button id="console-dirxml">Console dirxml</button>
+      <button id="console-group-start">Console Group Start</button>
+      <button id="console-group-end">Console Group End</button>
+      <button id="console-table">Console Table</button>
+      <button id="start-timer">Start Timer</button>
+      <button id="end-timer">End Timer</button>
+      <button id="console-trace">Console Trace</button>
+      <button id="trigger-global-error">Trigger a Global Error</button>
+      <!-- FAKE BUTTON TO THROW ERROR -->
+      <button id="Test">Test</button>
     </section>
   </main>
+
+  <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
+  <script>
+    window.TrackJS && TrackJS.install({ 
+      token: "b639e5c96d3d4a0eb02a75d93463c19f"
+      // for more configuration options, see https://docs.trackjs.com
+    });
+  </script>
+                        
+
 
   <script>
     let form = document.querySelector('form');
@@ -102,6 +114,106 @@
 
     // Start your code here
     // You may move this JS to another file if you wish
+
+
+    let count = 0;
+
+    // Console Log
+    document.getElementById('console-log').addEventListener('click', () => {
+      console.log('Console Log Demo');
+    });
+
+    // Console Error
+    document.getElementById('console-error').addEventListener('click', () => {
+      console.error('Console Error Demo');
+    });
+
+    // Console Count
+    document.getElementById('console-count').addEventListener('click', () => {
+      console.count('Count label');
+      count++;
+    });
+
+    // Console Warn
+    document.getElementById('console-warn').addEventListener('click', () => {
+      console.warn('Console Warn Button');
+    });
+
+    // Console Assert
+    document.getElementById('console-assert').addEventListener('click', () => {
+      console.assert(count == 5, 'Console Count is not 5');
+    });
+
+    // Console Clear
+    document.getElementById('console-clear').addEventListener('click', () => {
+      console.clear();
+      count = 0;
+    });
+
+    // Console Dir
+    document.getElementById('console-dir').addEventListener('click', () => {
+      console.dir(document.head);
+    });
+
+    // Console dirxml
+    document.getElementById('console-dirxml').addEventListener('click', () => {
+      console.dirxml(document.getElementById('console-dirxml'));
+    });
+
+    // Console Group Start
+    document.getElementById('console-group-start').addEventListener('click', () => {
+      console.group('console.group');
+    });
+
+    // Console Group End
+    document.getElementById('console-group-end').addEventListener('click', () => {
+      console.groupEnd('Group Label');
+    });
+
+    // Console Table
+    document.getElementById('console-table').addEventListener('click', () => {
+      console.table([{ name: 'Software Engineering', num: 100 }, { name: 'Programming Language', num: 130 }, { name: 'Advanced Software Engineering', num: 112 }]);
+    });
+
+    // Start Timer
+    document.getElementById('start-timer').addEventListener('click', () => {
+      console.time('Timer');
+    });
+
+    // End Timer
+    document.getElementById('end-timer').addEventListener('click', () => {
+      console.timeEnd('Timer');
+    });
+
+    // Console Trace
+    document.getElementById('console-trace').addEventListener('click', () => {
+      console.trace('end-timer');
+    });
+
+    document.getElementById('trigger-global-error').addEventListener('click', () => {
+      console.trace(give_me_an_error);
+    });
+
+    try {
+      let testButton = document.getElementById('Test');
+      if (!testButton) {
+        throw new Error('Test button is commented out');
+      }
+    } catch (err) {
+      alert(`Error: ${err.message}`);
+
+    } finally {
+      alert( 'Check if the test button is commented out or not in html' );
+    }
+
+    window.onerror = function(event, source, lineno, colno, error) {
+    console.log("Global Error:" + event);
+    console.log("Source: " + source);
+    }
+
+    TrackJS.track('Testing TrackJS!');
+
+    
   </script>
 </body>
 
